--- a/portfolio_update_v1/styles.css
+++ b/portfolio_update_v1/styles.css
@@ -99,7 +99,7 @@ header .profile-image:hover {
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: yellow;
 }
 
 ul.skills {
